--- a/styles/index.css
+++ b/styles/index.css
@@ -109,7 +109,7 @@ MEDIA QUERIES FOR COMMON SIZES
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .dn-grid {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
